Updating to latest FlutterFlow output.

--- a/web/index.html
+++ b/web/index.html
@@ -26,19 +26,20 @@
   <meta name="robots" content="noindex" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" href="tasker.page.png" sizes="any"/>
+  
 
   <!-- Open Graph & SEO tags -->
   <meta property="og:title" content="TaskerPage" />
-  <meta property="og:description" content="Built with FlutterFlow." />
-  <meta property="og:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" /> 
+  <meta property="og:description" content="Discover your talents!" />
+  <meta property="og:image" content="/assets/assets/images/tasker.page.png" /> 
   <meta name="twitter:title" content="TaskerPage" />
-  <meta name="twitter:description" content="Built with FlutterFlow." />
-  <meta name="twitter:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" />
+  <meta name="twitter:description" content="Discover your talents!" />
+  <meta name="twitter:image" content="/assets/assets/images/tasker.page.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <title> TaskerPage </title>
-  <meta name="description" content="Built with FlutterFlow." />
+  <meta name="description" content="Discover your talents!" />
     
 
   <!-- Status Bar color in Safari browser (iOS) and PWA -->
